[package]
name = "mp3-manager"
version = "0.0.1"
edition = "2021"
authors = ["Kvarzsiev"]
description = "A simple project made in Rust for managing mp3, setting id3 metadata in an easier way and generating m3u playlist files."
documentation = "https://github.com/Kvarzsiev/mp3-manager/tree/main#usage"
readme = "./README.md"
repository = "https://github.com/Kvarzsiev/mp3-manager/tree/main"
license = "MIT License"
keywords = ["mp3", "id3", "m3u", "music", "playlist"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
